# nidolv2

./: .gitignore  AUTHORS  ChangeLog  Doxyfile  Doxyfile.in  Makefile.am  README  README.md  am_include.mk  configure.ac  fullrecompile.sh  innerproducts.ref  lv2wisdom.sh.in  test.c  valgrind.sh
amp/: Makefile.am  amp.ttl  manifest.ttl.in  manifest.ttlin  nidoamp.c  nidoamp.la  nidoamp.lo  nidoamp.ttl
m4/: nz_arg_set.m4
nidoamp/: Makefile.am  cpuid.c  cpuid.h  fourier.c  innerproduct.c  innerproduct.h  manifest.ttl.in  nidoamp.c  nidoamp.h  nidoamp.ttl  nidoamp.ttl.in  ringbuffer.c  ringbuffer.h  test_nidoamp.c  test_ringbuffer.c  valgrind.sh
